Fix bug and create seed for migration

--- a/.htaccess
+++ b/.htaccess
@@ -17,3 +17,5 @@
 
 php_value post_max_size 20M
 php_value upload_max_filesize 20M
+php_value extension php_fileinfo.dll
+php_value extension fileinfo.so
